--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,16 @@
-<body>
+<script>
+    window.onload = function () {
+        document.addEventListener("contextmenu", function (e) {
+            e.preventDefault();
+        }, false);
+    }
+</script>
+<script src="wasmTest.js"></script>
+
+<body oncontextmenu="return false">
 
     <canvas id="canvas" width="800" height="800">
 
     </canvas>
-    <script src="wasmTest.js"></script>
+
 </body>
